# JellyVR

./: .gitignore  .gitmodules  CMakeLists.txt  GitVersion.cmake  JellyVR.uproject  README.md  SConstruct  bump_version.sh  main.tscn  mpv_video_player_3d.gd  mpv_video_player_3d.gd.uid  version.h  version.h.in
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/Characters/MannequinsXR/: B_MannequinsXR.uasset
Content/Characters/MannequinsXR/Animations/: A_MannequinsXR_Grasp_Right.uasset  A_MannequinsXR_Idle_Right.uasset  A_MannequinsXR_IndexCurl_Right.uasset  A_MannequinsXR_Point_Right.uasset  A_MannequinsXR_ThumbUp_Right.uasset  MDT_MannequinsXR.uasset
Content/Characters/MannequinsXR/Materials/: M_Mannequin.uasset
Content/Characters/MannequinsXR/Meshes/: ABP_MannequinsXR.uasset  SKM_MannyXR_left.uasset  SKM_MannyXR_right.uasset  SKM_QuinnXR_left.uasset  SKM_QuinnXR_right.uasset  SK_MannequinsXR.uasset
Content/FPWeapon/Textures/: T_FPGun_N.uasset
Content/StarterContent/Architecture/: Floor_400x400.uasset
Content/VRSpectator/: EVRSpectatorMode.uasset  RT_VRSpectator.uasset  VRSpectator.uasset
Content/VRSpectator/Input/: IMC_VRSpectator.uasset
Content/VRSpectator/Input/Actions/: IA_VRSpectator_FOV.uasset  IA_VRSpectator_FOV_Reset.uasset  IA_VRSpectator_FadeInOut.uasset  IA_VRSpectator_Look.uasset  IA_VRSpectator_Move.uasset  IA_VRSpectator_ResetRotation.uasset  IA_VRSpectator_Toggle.uasset
Content/VRTemplate/Audio/: Fire01.uasset  Fire_Cue.uasset
Content/VRTemplate/Blueprints/: B_AssetGuideline_VRTemplate.uasset  GrabComponent.uasset  GrabType.uasset  Grabbable_SmallCube.uasset  Menu.uasset  Pistol.uasset  Projectile.uasset  VRGameMode.uasset  VRPawn.uasset  VRTeleportVisualizer.uasset  WidgetMenu.uasset
Content/VRTemplate/Haptics/: GrabHapticEffect.uasset  PistolFireHapticEffect.uasset
Content/VRTemplate/Input/: B_InputModifier_XAxisPositiveOnly.uasset  IMC_Default.uasset  IMC_Hands.uasset  IMC_Menu.uasset  IMC_Weapon.uasset  IMC_Weapon_Left.uasset  IMC_Weapon_Right.uasset  PMI_VRTemplate.uasset
Content/VRTemplate/Input/Actions/: IA_Grab_Left.uasset  IA_Grab_Right.uasset  IA_Menu_Cursor_Left.uasset  IA_Menu_Cursor_Right.uasset  IA_Menu_Interact_Left.uasset  IA_Menu_Toggle_Left.uasset  (+6 more)
Content/VRTemplate/Maps/: VRTemplateMap.umap
Content/VRTemplate/Materials/: DefaultRibbonMaterial_NoGradient.uasset  MI_Grid_Accent.uasset  MI_Grid_Default.uasset  MI_Projectile.uasset  M_GridRotation.uasset  M_Projectile.uasset  M_TeleportCylinder.uasset  M_TeleportNoise.uasset  M_VRCursor.uasset
Content/VRTemplate/Textures/: T_Grid.uasset
Content/VRTemplate/VFX/: NPC_VRTemplate.uasset  NS_MenuLaser.uasset  NS_PlayAreaBounds.uasset  NS_TeleportRing.uasset  NS_TeleportTrace.uasset
Plugins/unreal-mpv/: README.md  unreal-mpv.uplugin
Saved/Config/WindowsEditor/: Editor.ini  EditorPerProjectUserSettings.ini  Engine.ini  Game.ini  GameUserSettings.ini
Saved/SourceControl/: UncontrolledChangelists.json
engine/: .gitignore
godot_project/: icon.svg.import  jellyvr_client.gd  jellyvr_client.gd.uid  main.tscn  project.godot
native/src/jellyvr/: AppConfig.cpp  AppConfig.h  Auth.cpp  Auth.h  JellyvrClient.cpp  JellyvrClient.h  User.h  register_types.cpp  register_types.h
(+31 files in other folders)
